<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/welcome_to_healthy_harvest"
        android:textSize="38sp"
        android:textColor="#35374f"
        android:background="#7bae37"
        android:gravity="center_horizontal"
        android:fontFamily="@font/tangerine_regular"
        />

    <ImageView
        android:id="@+id/home_page_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/home_welcome_text"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_icon_planting"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/choose_agriculture_as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_want_to_choose_agriculture_as"
        android:fontFamily="@font/miniver_regular"
        android:layout_marginVertical="10dp"
        android:textSize="24sp"
        android:layout_below="@+id/home_page_logo"
        android:gravity="center"
        />
    <RadioGroup
        android:id="@+id/radio_buttons_choose_agriculture_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_agriculture_as"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobby"
            android:padding="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/metal_mania_regular"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="24sp"
            android:text="@string/profession"
            android:fontFamily="@font/metal_mania_regular"/>
    </RadioGroup>
</RelativeLayout>